# vocutil

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.rst  freeze.sh  pyproject.toml  setup.cfg  tox.ini
docs/: classes.rst  cli.rst  conf.py  functions.rst  index.rst  license.rst  readme.rst
vocutil/: __init__.py  conftest.py  create.py  enrich.py  exceptions.py  load.py  test_load.py  test_testgen.py  testgen.py
vocutil/cc/: __init__.py  assessment.py  bank.py  cartridge.py  fib.py  item.py  manifest.py  mc.py  mr.py  test_assessment.py  test_bank.py  test_fib.py  test_item.py  test_manifest.py  test_mc.py  test_mr.py  test_tf.py  tf.py
