# ******************************************************************************
#
# vocutil, educational vocabulary utilities.
#
# Copyright 2022-2023 Jeremy A Gray <gray@flyquackswim.com>.
#
# All rights reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later
#
# ******************************************************************************

[metadata]

author = Jeremy A Gray
author_email = gray@flyquackswim.com
description = Vocabulary utilities for education
license = GPL-3.0-or-later
license_files = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeremy A Gray
maintainer_email = gray@flyquackswim.com
name = vocutil
url = https://github.com/jeremyagray/vocutil
version = 0.0.3

project_urls =
  Issues = https://github.com/jeremyagray/vocutil/issues
  Documentation = https://vocutil.readthedocs.io/
  Repository = https://github.com/jeremyagray/vocutil

classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Intended Audience :: Education
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Version Control :: Git

[options]

packages = vocutil

install_requires =
  pyenchant
  ruamel.yaml
  toml

tests_require =
  black
  factory-boy
  flake8
  flake8-docstrings
  hypothesis
  isort
  pyfakefs
  pytest
  pytest-cov
  tox

[options.entry_points]

console_scripts =
  vocutil = vocutil:main
